fix: ajusta carrossel home mobile

--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -5,7 +5,7 @@
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
   </div>
   <div class="carousel-inner">
-    <div class="first-item carousel-item active">
+    <div class="carousel-item active">
       <img src="../../../assets/images/banner.png" class="banner1-desk d-block w-100" alt="...">
       <img src="../../../../assets/images/banner1_mobile.png" class="banner1-mobile d-none w-100" alt="">
       <div class="be-box position-absolute text-start top-50 start-25 translate-middle">
