--- a/src/app/components/shared/carousel/carousel.component.scss
+++ b/src/app/components/shared/carousel/carousel.component.scss
@@ -247,13 +247,13 @@ li{
     justify-self: center;
     width: 100%;
     max-width: 100vw;
-    left: 50% !important;
+    left: 60% !important;
     top: 30% !important;
     flex-shrink: 1;
   }
 
   .parceiros-box {
-    display: inline-block;
+    display: block;
     grid-row: 2 / 3;
     grid-column: 1 / 2;
     justify-self: center;
@@ -261,8 +261,7 @@ li{
     width: 100%;
     max-width: 100vw;
     left: 50% !important;
-    top: 30% !important;
-    height: 100vh;
+    top: 65% !important;
     flex-shrink: 1;
   }
 }
