--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,13 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-dark" [ngClass]="getRoute()">
   <div class="menu__logo">
     <a class="navbar-brand" href="#">
-      <img src="../../../assets/images/logo_sennatech.png"/>
+      <img src="../../../assets/images/logo_sennatech.png" />
     </a>
   </div>
-  <a class="navbar-toggler " type="button" href="#navbarNav" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-toggler" type="button" href="#navbarNav" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </a>
   <div class=" navbar-collapse collapse menu__pages justify-content-center" id="navbarNav">
+    <div class="text-lg-end menu__closeIcon">
+      <i class="bi bi-x-lg" (click)="hideNavbar()" ></i>
+    </div>
     <ul class="navbar-nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" [routerLink]="sobre" routerLinkActive="active">Sobre</a>
@@ -28,8 +32,9 @@
         <a class="nav-link" [routerLink]="contato" routerLinkActive="active">Contato</a>
       </li>
     </ul>
+    <div class="menu__search justify-content-center">
+      <app-search class="search"></app-search>
+    </div>
   </div>
-  <div class="menu__search justify-content-center">
-    <app-search class="search"></app-search>
-  </div>
+
 </nav>
