--- a/src/app/components/shared/search/search.component.scss
+++ b/src/app/components/shared/search/search.component.scss
@@ -4,6 +4,10 @@
     color: #6AF4FF;
     transition: 0.4s cubic-bezier(0.45, 0.05, 0.55, 0.95);
   }
+
+  @media screen and (min-width: 320px) and (max-width: 700px) {
+    font-size: 30px;
+  }
 }
 
 #collapseWidthExample{
