fix: larguras menu

--- a/src/app/components/shared/carousel/carousel.component.html
+++ b/src/app/components/shared/carousel/carousel.component.html
@@ -31,7 +31,7 @@
         </div>
       </div>
     </div>
-    <div class="carousel-item">
+    <!-- <div class="carousel-item">
       <img src="../../../assets/images/banner_2.png" class="banner2-desk d-block w-100" alt="...">
       <img src="../../../../assets/images/banner2_mobile.png" class="banner2-mobile d-none w-100" alt="...">
       <div class="position-absolute top-50 start-50 translate-middle">
@@ -43,7 +43,7 @@
           </button>
         </div>
       </div>
-    </div>
+    </div> -->
     <app-menu></app-menu>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
