--- a/src/app/components/shared/carousel/carousel.component.scss
+++ b/src/app/components/shared/carousel/carousel.component.scss
@@ -162,7 +162,7 @@ $sennatechColorAlt: #B6B6B6;
 
   &__imgParceiros{
     display: inline-flex;
-    width: 100%;
+    // width: 100%;
     align-items: center;
   }
 
@@ -196,6 +196,7 @@ li{
   gap: 10px;
   width: 50%;
   max-width: 100vw;
+  left: 30% !important;
   flex-shrink: 1;
 }
 
@@ -205,7 +206,7 @@ li{
   align-items: center;
   flex-direction: column;
   width: 50%;
-  left: 65% !important;
+  left: 70% !important;
   max-width: 100vw;
 }
 
@@ -236,7 +237,7 @@ li{
     }
   
     &__title{
-      font-size: 80px !important;
+      font-size: 65px !important;
     }
   }
 
@@ -247,7 +248,7 @@ li{
     justify-self: center;
     width: 100%;
     max-width: 100vw;
-    left: 60% !important;
+    left: 53% !important;
     top: 30% !important;
     flex-shrink: 1;
   }
