--- a/src/app/components/menu/menu.component.scss
+++ b/src/app/components/menu/menu.component.scss
@@ -83,8 +83,9 @@
   }
 
   &__search {
-    width: 33%;
-    display: flex;
+    width: 50%;
+    position: relative;
+    left: 20%;
 
     @media screen and (min-width: 320px) and (max-width: 700px) {
       margin: 15% 35%;
@@ -125,6 +126,7 @@
 .navbar-nav{
   @media screen and (min-width: 320px) and (max-width: 700px) {
     gap: 40px;
+    padding: 15px;
   }
 }
 
