--- a/src/app/components/shared/search/search.component.scss
+++ b/src/app/components/shared/search/search.component.scss
@@ -10,27 +10,67 @@
   }
 }
 
-#collapseWidthExample{
-  display: inline-block;
-  overflow: hidden;
-  white-space: nowrap;
-  background: yellow;
-  vertical-align: middle;
-  line-height: 30px;
-  height: 30px;
-  width: 0px;
+.search-group {
+  display: flex;
+  position: relative;
+  right: 20%; 
+  @media screen and (min-width: 320px) and (max-width: 700px) {
+    right: 90%;
+  }
 }
 
-#collapseWidthExample.in {
-  width: 220px;
-}
-
-.searchDisplay{
+.searchInputContainer {
+  position: relative;
   display: none;
 }
 
+.searchInputContainer.showInput {
+  display: block;
+  transition: all 0.3s ease-in-out;
+}
+
+.input-group-append {
+  @media screen and (min-width: 320px) and (max-width: 700px) {
+    position: fixed;
+    left: 45%;
+  }
+}
+
+.searchDisplay {
+  display: block;
+  width: 17em;
+  background-color: #B6B6B6 !important;
+  border: none;
+  border-radius: 0.375rem 0rem 0rem 0.375rem;
+  
+  @media screen and (min-width: 320px) and (max-width: 700px) {
+    width: 10em;
+    height: 57px;
+  }
+}
+
+.form-control:focus {
+  border-color: transparent !important;
+  box-shadow: none !important;
+}
+
+.searchDisplay::placeholder {
+  color: white;
+}
+
+.btn {
+  background-color: transparent;
+  color: white;
+  border-radius: 0rem 0.375rem 0.375rem 0rem;
+  border: none !important;
+}
+
+.searchButton {
+ background-color:#B6B6B6 !important
+}
 
 .show-results {
   display: block;
 }
+
 
