--- a/src/app/components/shared/search/search.component.scss
+++ b/src/app/components/shared/search/search.component.scss
@@ -29,10 +29,17 @@
   transition: all 0.3s ease-in-out;
 }
 
-.input-group-append {
+.input-group-append-45 {
   @media screen and (min-width: 320px) and (max-width: 700px) {
     position: fixed;
     left: 45%;
+  }
+}
+
+.input-group-append-65 {
+  @media screen and (min-width: 320px) and (max-width: 700px) {
+    position: fixed;
+    left: 65%;
   }
 }
 
@@ -44,7 +51,7 @@
   border-radius: 0.375rem 0rem 0rem 0.375rem;
   
   @media screen and (min-width: 320px) and (max-width: 700px) {
-    width: 10em;
+    width: 13em;
     height: 57px;
   }
 }
