--- a/src/app/pages/carreira/carreira.component.html
+++ b/src/app/pages/carreira/carreira.component.html
@@ -19,7 +19,7 @@
           <div class="card-body">
             <p class="card-location">{{ vaga.location }}</p>
             <h3 class="card-title">{{ vaga.funcao }}</h3>
-            <a routerLink="./vaga/{{vaga.id}}" class="card-link">
+            <a routerLink="./vaga/{{vaga.codVaga}}" class="card-link">
               <p class="card-text">Acessar Vaga <i class="bi bi-arrow-up-right"></i>
               </p>
             </a>
